# RealmsCode

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  License.txt  MyLSan.supp  README.txt  abjuration.cpp  access.cpp  action.cpp  afflictions.cpp  alchemy.cpp  alchemy.h  alignment.cpp  alphanum.cpp  alphanum.hpp  anchor.cpp  anchor.h  area.cpp  area.h  asynch.cpp  asynch.h  attack.cpp  bank.cpp  bank.h  bans.cpp  bans.h  blacklist.txt  bstring.h  builder.cpp  calendar.cpp  calendar.h  carry.cpp  carry.h  catRef.cpp  catRef.h  catRefInfo.cpp  catRefInfo.h  (+252 more)
accounts/: accounts.cpp
areas/: area.cpp  catRef.cpp  catRefInfo.cpp  location.cpp  property.cpp  range.cpp  room.cpp  rooms.cpp  startlocs.cpp  wanderInfo.cpp  zone.cpp
bards/: creatureSongs.cpp  identify.cpp  songLoader.cpp  songs.cpp
combat/: attack.cpp  combat.cpp  combatSystem.cpp  damage.cpp  die.cpp  duel.cpp  gods.cpp  singers.cpp  specials.cpp  threat.cpp  undead.cpp  warriors.cpp  weaponless.cpp
commands/: action.cpp  cmd.cpp  command2.cpp  command4.cpp  command5.cpp  commandBase.cpp  communication.cpp  socials.cpp
crafting/: alchemy.cpp  craft.cpp  fishing.cpp
crafting/alchemy/: alchemy.cpp  alchemyLoader.cpp
creatures/: afflictions.cpp  alignment.cpp  carry.cpp  creature.cpp  creature2.cpp  creatureAttr.cpp  creatureEffects.cpp  creatureSkills.cpp  creatures.cpp  inventory.cpp  lasttime.cpp  monType.cpp  monsters.cpp  raceData.cpp  size.cpp  stats.cpp
database/: database.cpp
docker/dev/: Dockerfile  dev-exec.sh  dev-run.sh
docker/web/: Dockerfile  web-build.sh  web-exec.sh  web-run.sh
economy/: bank.cpp  commerce.cpp  lottery.cpp  money.cpp  playerCommerce.cpp  unique.cpp
effects/: effects.cpp  effectsLoader.cpp
fmt/: format.cc
groups/: group.cpp  groups.cpp
include/: accounts.hpp  alchemy.hpp  alphanum.hpp  anchor.hpp  area.hpp  async.hpp  asynch.hpp  bank.hpp  bans.hpp  blackjack.hpp  bstring.hpp  calendar.hpp  cards.hpp  carry.hpp  catRef.hpp  catRefInfo.hpp  clans.hpp  cmd.hpp  color.hpp  commands.hpp  commerce.hpp  common.hpp  communication.hpp  config.hpp  container.hpp  craft.hpp  creatureStreams.hpp  creatures.hpp  damage.hpp  database.hpp  deityData.hpp  delayedAction.hpp  dice.hpp  die.hpp  dm.hpp  effects.hpp  exits.hpp  factions.hpp  fighters.hpp  fishing.hpp  (+82 more)
include/builders/: alchemyBuilder.hpp  effectBuilder.hpp  fluentBuilder.hpp  fluentBuilderEnd.hpp  msdpBuilder.hpp  mxpBuilder.hpp  skillBuilder.hpp  songBuilder.hpp
include/effolkronium/: random.hpp
include/enums/: bits.hpp  loadType.hpp
include/fmt/: core.h  format-inl.h  format.h
include/indexing_suite/: algorithms.hpp  container_proxy.hpp  container_suite.hpp  container_traits.hpp  deque.hpp  element_proxy.hpp  element_proxy_traits.hpp  int_slice_helper.hpp  iterator_range.hpp  iterator_traits.hpp  map.hpp  methods.hpp  multimap.hpp  pair.hpp  proxy_iterator.hpp  python_iterator.hpp  set.hpp  shared_proxy_impl.hpp  slice.hpp  slice_handler.hpp  suite_utils.hpp  vector.hpp  visitor.hpp  workaround.hpp
include/lru/: key-statistics.hpp  lru-cache.hpp  lru.hpp  statistics.hpp
include/mudObjects/: accounts.hpp  areaRooms.hpp  container.hpp  creatures.hpp  exits.hpp  monsters.hpp  mudObject.hpp  objects.hpp  players.hpp  rooms.hpp  uniqueRooms.hpp
indexing_suite/: list.hpp  slice.hpp  value_traits.hpp
io/: color.cpp  creatureStreams.cpp  files-xml-read.cpp  files-xml-save.cpp  io.cpp  socket.cpp  vprint.cpp  xml.cpp
json/: accounts-json.cpp  catref-json.cpp  effects-json.cpp  hooks-json.cpp  money-json.cpp  mudObject-json.cpp  objects-json.cpp  quests-json.cpp  realms-json.cpp  zones-json.cpp
magic/: magic.cpp  magic1.cpp  realms.cpp  spells.cpp
magic/divine/: healers.cpp  healmagic.cpp
magic/schools/: abjuration.cpp  conjuration.cpp  divination.cpp  enchantment.cpp  evocation.cpp  illusion.cpp  necromancy.cpp  (+2 more)
main/: list.cpp  main.cpp  mordorMain.cpp  updater.cpp
movement/: anchor.cpp  exits.cpp  movement.cpp  ships.cpp  track.cpp
objects/: objIncrease.cpp  object.cpp  objectAttr.cpp  objects.cpp  special1.cpp
players/: clans.cpp  equipment.cpp  guilds.cpp  levelGain.cpp  pets.cpp  player.cpp  player2.cpp  playerClass.cpp  playerEffects.cpp  playerInfo.cpp  playerTitle.cpp  players.cpp  post.cpp  prefs.cpp  prompt.cpp  proxy.cpp  statistics.cpp
python/: mud.cpp  mudCreature.cpp  mudEffect.cpp  mudObject.cpp  mudStat.cpp
pythonLib/: alchemyLib.py  effectLib.py  hookLib.py  mudLib.py  skillLib.py  songLib.py
questing/: factions.cpp  logic.cpp  oldQuest.cpp  quests.cpp  talk.cpp
roguelike/: blackjack.cpp  cards.cpp  rogues.cpp  steal.cpp  traps.cpp
server/: access.cpp  accounts.cpp  async.cpp  asynch.cpp  bans.cpp  calendar.cpp  config.cpp  container.cpp  deityData.cpp  delayedAction.cpp  demographics.cpp  discordBot.cpp  flags.cpp  global.cpp  hooks.cpp  httpServer.cpp  log.cpp  login.cpp  mccp.cpp  memory.cpp  msdp.cpp  msdpLoader.cpp  mudObject.cpp  mxp.cpp  mxpLoader.cpp  pythonHandler.cpp  queue.cpp  security.cpp  server.cpp  serverTimer.cpp  sql.cpp  sqlite.cpp  swap.cpp  update.cpp  web.cpp
skills/: skillCommand.cpp  skillGain.cpp  skillLoader.cpp  skills.cpp
staff/: builder.cpp  catref-staff.xml.cpp  dm.cpp  dmcrt.cpp  dmobj.cpp  dmply.cpp  dmroom.cpp  spelling.cpp  staff.cpp  watchers.cpp
util/: alphanum.cpp  dice.cpp  errors.cpp  help.cpp  md5.cpp  misc.cpp  timer.cpp
wip/: fighters.cpp  songs.cpp
xml/: alchemy-xml.cpp  area-xml.cpp  bans-xml.cpp  calendar-xml.cpp  catref-xml.cpp  clans-xml.cpp  config-xml.cpp  craft-xml.cpp  creatures-xml.cpp  dice-xml.cpp  diety-xml.cpp  effects-xml.cpp  exits-xml.cpp  factions-xml.cpp  files-xml-read.cpp  files-xml-save.cpp  fishing-xml.cpp  guilds-xml.cpp  hooks-xml.cpp  location-xml.cpp  monsters-xml.cpp  mxp-xml.cpp  objects-xml.cpp  players-xml.cpp  property-xml.cpp  quests-xml.cpp  range-xml.cpp  rooms-xml.cpp  ships-xml.cpp  skills-xml.cpp  socials-xml.cpp  songs-xml.cpp  specials-xml.cpp  spells-xml.cpp  startlocs-xml.cpp  statistics-xml.cpp  stats-xml.cpp  wanderInfo-xml.cpp  xml.cpp
(+2 files in other folders)
